# textfsm-ai

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  index.html  latest  mkdocs.yml  pr-description.md  pyproject.toml  pytest.ini  release-notes.md  requirements-dev.txt  requirements.txt  sitemap.xml  tox.ini  versions.json
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  publish-testpypi.yml  release.yml
0.1/: 404.html  index.html  sitemap.xml
0.1.19/: 404.html  index.html  sitemap.xml
0.1.19/changelog/: index.html
0.1.19/cli/: index.html
0.1.19/golden-tests/: index.html
0.1.19/reference/: index.html
0.1.20/: 404.html  index.html  sitemap.xml
0.1.20/changelog/: index.html
0.1.20/cli/: index.html
0.1.20/golden-tests/: index.html
0.1.20/reference/: index.html
0.1.25-test/: 404.html  index.html  sitemap.xml
0.1.25-test/changelog/: index.html
0.1.25-test/cli/: index.html
0.1.25-test/golden-tests/: index.html
0.1.25-test/reference/: index.html
0.1.9/: 404.html  index.html  sitemap.xml
0.1.9/changelog/: index.html
0.1.9/cli/: index.html
0.1.9/golden-tests/: index.html
0.1.9/reference/: index.html
0.1/cli/: index.html
0.1/getting-started/: index.html
0.1/reference/: index.html
0.1/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/changelog/: index.html
0.2.1/cli/: index.html
0.2.1/golden-tests/: index.html
0.2.1/reference/: index.html
0.2.10/: 404.html  index.html  sitemap.xml
0.2.10-test/: 404.html  index.html  sitemap.xml
0.2.10-test/changelog/: index.html
0.2.10-test/cli/: index.html
0.2.10-test/golden-tests/: index.html
0.2.10-test/reference/: index.html
0.2.10/changelog/: index.html
0.2.10/cli/: index.html
0.2.10/golden-tests/: index.html
0.2.10/reference/: index.html
0.2.10/search/: search_index.json
0.2.11/: 404.html  index.html  sitemap.xml
0.2.11/changelog/: index.html
0.2.11/cli/: index.html
0.2.11/golden-tests/: index.html
0.2.11/reference/: index.html
0.2.13-test/: 404.html  index.html  sitemap.xml
0.2.13-test/changelog/: index.html
0.2.13-test/cli/: index.html
0.2.13-test/golden-tests/: index.html
0.2.13-test/reference/: index.html
0.2.3/: 404.html  index.html  sitemap.xml
0.2.3/changelog/: index.html
0.2.3/cli/: index.html
0.2.3/golden-tests/: index.html
0.2.3/reference/: index.html
0.2.4/: 404.html  index.html  objects.inv  sitemap.xml
0.2.4/changelog/: index.html
0.2.4/cli/: index.html
0.2.4/golden-tests/: index.html
0.2.4/reference/: index.html
0.2.5/: 404.html  index.html  sitemap.xml
0.2.5/changelog/: index.html
0.2.5/cli/: index.html
0.2.5/golden-tests/: index.html
0.2.5/reference/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/changelog/: index.html
0.3.0/cli/: index.html
0.3.0/golden-tests/: index.html
0.3.0/reference/: index.html
0.3.0/search/: search_index.json
0.3.2/: 404.html  index.html  sitemap.xml
0.3.2/changelog/: index.html
0.3.2/cli/: index.html
0.3.2/golden-tests/: index.html
0.3.2/reference/: index.html
0.3.4/: 404.html  index.html  sitemap.xml
0.3.4/changelog/: index.html
0.3.4/cli/: index.html
0.3.4/golden-tests/: index.html
0.3.4/reference/: index.html
0.3.7/: 404.html  index.html  sitemap.xml
0.3.7/changelog/: index.html
0.3.7/cli/: index.html
0.3.7/golden-tests/: index.html
0.3.7/reference/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/changelog/: index.html
0.4.0/cli/: index.html
0.4.0/golden-tests/: index.html
0.4.0/reference/: index.html
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/changelog/: index.html
0.4.1/cli/: index.html
0.4.1/golden-tests/: index.html
0.4.1/reference/: index.html
0.4.2/: 404.html  index.html  sitemap.xml
0.4.2/changelog/: index.html
0.4.2/cli/: index.html
0.4.2/reference/: index.html
0.4.2/search/: search_index.json
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/changelog/: index.html
0.5.0/cli/: index.html
0.5.0/providers/: index.html
0.5.0/reference/: index.html
0.5.0/search/: search_index.json
0.5.1/: 404.html  index.html  objects.inv  sitemap.xml
0.5.1/changelog/: index.html
0.5.1/cli/: index.html
0.5.1/providers/: index.html
0.5.1/reference/: index.html
0.5.1/search/: search_index.json
cli/: index.html
docs/: changelog.md  cli.md  getting-started.md  index.md
docs/cli/: index.md  providers-list.md
docs/getting-started/: installation.md  quickstart.md
docs/golden-tests/: index.md
docs/guides/: human-in-the-loop-review.md
docs/providers/: index.md  openai.md
docs/reference/: ai_router.md  config_loader.md  index.md  providers.md  quota_manager.md
getting-started/: index.html
reference/: index.html
reference/ai_router/: index.html
reference/config_loader/: index.html
reference/providers/: index.html
reference/quota_manager/: index.html
scripts/: clean  clean.ps1  release-all.ps1  release-prod.ps1  release.ps1  tox  tox.ps1  verify-version.ps1  verify-version.py
tests/: conftest.py  helpers.py  test_ai_api_key.py  test_ai_router.py  test_api.py  test_cli_config_init.py  test_cli_config_migrate.py  test_cli_config_show.py  test_cli_providers.py  test_config_commands.py  test_config_loader.py  test_config_manager.py  test_config_migrate.py  test_generate_cmd.py  test_generate_cmd_real.py  test_model_selector.py  test_orchestrator.py  test_provider_ping.py  test_providers.py  test_quota_manager.py  test_user_config.py  test_version_consistency.py
tests/cli/: test_cli_dsl.py  test_cli_pipeline.py  test_cli_providers.py  test_generate_cmd.py  test_list_models_cmd.py  test_orchestrator_cmd.py  test_providers_cmd.py
tests/integration/: README.md  test_cli_generate_anthropic.py  test_cli_generate_azure.py  (+38 more)
textfsm_ai/: __init__.py  ai_router.py  api.py  api_models.py  config.yaml  config_loader.py  config_manager.py  engine.py  model_selector.py  provider_ping.py  quota_manager.py  user_config.py
(+373 files in other folders)
