[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textfsm_ai"
version = "0.2.0"
description = "AI-powered TextFSM template generator with multi-provider routing"
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "Tuyen Mathew Duong", email = "tuyen@geekstrident.com" }
]

maintainers = [
    { name = "Tuyen Mathew Duong", email = "tuyen@geekstrident.com" }
]

requires-python = ">=3.9"

dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31",
    "click>=8.1",
    "openai>=1.0.0",
    "google-genai>=0.1.0",
    "anthropic",
    "deepseek",

]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing",
    "Topic :: Utilities",

    "Operating System :: OS Independent",
]

keywords = [
    "textfsm",
    "network automation",
    "cli parsing",
    "template generator",
    "ai",
    "llm",
    "openai",
    "claude",
    "gemini",
    "deepseek",
    "router",
    "quota manager",
]

[project.optional-dependencies]
dev = ["build", "twine"]
test = ["pytest", "pytest-cov"]
lint = ["ruff"]
compat = ["tomli; python_version < '3.11'"]
all = [
    "build",
    "twine",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
textfsm-ai = "textfsm_ai.cli.top:main"

[project.urls]
Homepage = "https://github.com/Geeks-Trident-LLC/textfsm-ai"
Repository = "https://github.com/Geeks-Trident-LLC/textfsm-ai"
Issues = "https://github.com/Geeks-Trident-LLC/textfsm-ai/issues"
Documentation = "https://geeks-trident-llc.github.io/textfsm-ai/latest/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["textfsm_ai*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.pytest.ini_options]
addopts = "-ra --cov=textfsm_ai --cov-report=term-missing"
testpaths = ["tests"]

# ---------------------------
# Formatting + Linting Tools
# ---------------------------

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
