[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textfsm_ai"
version = "0.3.7"
description = "AI-powered TextFSM template generator with multi-provider routing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

authors = [
    { name = "Tuyen Mathew Duong", email = "tuyen@geekstrident.com" }
]

maintainers = [
    { name = "Tuyen Mathew Duong", email = "tuyen@geekstrident.com" }
]

dependencies = [
    "PyYAML>=6.0",
    "requests>=2.32",
    "click>=8.1",
    "textfsm>=1.1.0",
    "openai>=1.0.0",
    "google-genai>=0.2.0",
    "azure-ai-inference>=1.0.0b9",
    "anthropic>=0.8.0",
    "tomli; python_version < '3.11'",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing",
    "Topic :: Utilities",

    "Operating System :: OS Independent",
]

keywords = [
    "textfsm",
    "network automation",
    "cli parsing",
    "template generator",
    "ai",
    "llm",
    "openai",
    "claude",
    "gemini",
    "azure-ai-inference",
    "deepseek",
    "router",
    "quota manager",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
azure = ["azure-ai-inference>=1.0.0b9"]
anthropic = ["anthropic>=0.8.0"]
gemini = ["google-genai>=0.2.0"]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "respx",
]

build = ["build", "twine"]

all = [
    "openai>=1.0.0",
    "azure-ai-inference>=1.0.0b9",
    "anthropic>=0.8.0",
    "google-genai>=0.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "respx",
]

[project.scripts]
textfsm-ai = "textfsm_ai.cli.top:main"

[project.urls]
Homepage = "https://github.com/Geeks-Trident-LLC/textfsm-ai"
Repository = "https://github.com/Geeks-Trident-LLC/textfsm-ai"
Issues = "https://github.com/Geeks-Trident-LLC/textfsm-ai/issues"
Documentation = "https://geeks-trident-llc.github.io/textfsm-ai/latest/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["textfsm_ai*"]
exclude = ["tests*", "docs*", "examples*", "scripts*"]

[tool.pytest.ini_options]
addopts = "-ra --cov=textfsm_ai --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "T100",
]

[tool.ruff.format]
exclude = ["**/*.py"]
