[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textfsm_ai"
version = "0.5.1"
description = "AI-powered TextFSM template generator with multi-provider routing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

authors = [
    { name = "Tuyen Mathew Duong", email = "tuyen@geekstrident.com" }
]

maintainers = [
    { name = "Tuyen Mathew Duong", email = "tuyen@geekstrident.com" }
]

dependencies = [
    "PyYAML>=6.0",
    "requests>=2.32",
    "click>=8.1",
    "textfsm>=1.1.0",
    "openai>=1.0.0",
    "google-genai>=0.2.0",
    "azure-ai-inference>=1.0.0b9",
    "anthropic>=0.8.0",
    # Pinned exactly: 1.10.0 is the last mistralai release supporting
    # Python 3.9 (1.10.1+ and all 2.x require Python >=3.10, which would
    # break this package's >=3.9 support).
    "mistralai==1.10.0",
    # Pinned exactly for the same reason: 1.42.97 is the newest boto3
    # release with a Python 3.9-compatible botocore; verified via
    # `pip download --python-version 3.9` resolution, since boto3 bumps
    # its Python floor frequently across even small version bumps.
    "boto3==1.42.97",
    # Pinned exactly for the same reason: 5.21.1 is the last cohere
    # release supporting Python 3.9 (6.x/7.x require Python >=3.10);
    # verified via `pip download --python-version 3.9` resolution.
    "cohere==5.21.1",
    # Pinned exactly for reproducibility (the latest release already
    # supports Python 3.9, verified via `pip download --python-version
    # 3.9` resolution, unlike mistralai/boto3/cohere above). Note: this
    # is a much heavier dependency than every other provider SDK here -
    # ~36MB, since it's Oracle's single all-services SDK (compute,
    # storage, IAM, ...), not a Generative-AI-only package (no such
    # package exists on PyPI) - plus crypto libs (cryptography,
    # pyOpenSSL) needed for its request-signing auth model.
    "oci==2.182.0",
    "tomli; python_version < '3.11'",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing",
    "Topic :: Utilities",

    "Operating System :: OS Independent",
]

keywords = [
    "textfsm",
    "network automation",
    "cli parsing",
    "template generator",
    "ai",
    "llm",
    "openai",
    "claude",
    "anthropic",
    "gemini",
    "azure-ai-inference",
    "deepseek",
    "groq",
    "xai",
    "grok",
    "together-ai",
    "fireworks-ai",
    "cerebras",
    "perplexity",
    "openrouter",
    "moonshot",
    "kimi",
    "mistral",
    "bedrock",
    "aws",
    "cohere",
    "vertex ai",
    "gcp",
    "oracle cloud infrastructure",
    "oci",
    "device output parsing",
    "log extraction",
    "structured data extraction",
    "screen scraping",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "respx",
]

build = ["build", "twine"]

all = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "respx",
    "build",
    "twine",
]

[project.scripts]
textfsm-ai = "textfsm_ai.cli.top:main"

[project.urls]
Homepage = "https://github.com/Geeks-Trident-LLC/textfsm-ai"
Repository = "https://github.com/Geeks-Trident-LLC/textfsm-ai"
Issues = "https://github.com/Geeks-Trident-LLC/textfsm-ai/issues"
Documentation = "https://geeks-trident-llc.github.io/textfsm-ai/latest/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["textfsm_ai*"]
exclude = ["tests*", "docs*", "examples*", "scripts*"]

[tool.pytest.ini_options]
addopts = "-ra --cov=textfsm_ai --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests that require real API calls or external services",
]
filterwarnings = [
    "ignore::DeprecationWarning:google\\.genai\\.",
    "ignore::DeprecationWarning:cohere\\.",
]

[tool.coverage.report]
fail_under = 70

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
fix = true
force-exclude = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "T100",
]

[tool.ruff.format]
exclude = ["**/*.py"]
